Minor tweaks to the current design.

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <!-- Static navbar -->
 
     <nav class="navbar navbar-fixed-top" role="navigation">
-        <a class="navbar-brand" href="#">
+<!--        <a class="navbar-brand" href="#">
             <img alt="Brand" src="img/niFi-logo-horizontal.png">
-        </a>
+        </a>-->
 
         <div class="container navbar-container">
             <div class="navbar-header">
@@ -109,11 +109,13 @@
     <div class="jumbotron">
         <div id="content">
             <div id="banner-row" class="row">
-                <div class="col-md-4" style="text-align: right">
-                    <h1 id="wzxhzdk0-apache-nifi"><span class="nifi-txt">Apache <span class="ni">ni</span><span
-                            class="fi">fi</span> </span></h1>
+                <div class="col-md-4" style="text-align: right; width: 465px; margin-left: 100px;">
+                    <img style="width: 75px; float: left; margin-right: 10px; margin-top: 20px;" src="img/niFi-drop-only.png" />
+                    <h1 id="wzxhzdk0-apache-nifi" style="width: 350px; float: left;">
+                        <span class="nifi-txt">Apache <span class="ni">ni</span><span class="fi">fi</span> </span>
+                    </h1>
 
-                    <p>is a dataflow system based on the concepts of flow-based programming. It is currently a part of
+                    <p style="clear: both;">is a dataflow system based on the concepts of flow-based programming. It is currently a part of
                         the Apache Incubator.</p>
                 </div>
                 <div class="flow-img-div col-md-8">
